Format all source code per black and add black to github actions

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,9 +29,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools
         python -m pip install --upgrade cython
+        python -m pip install --upgrade black
         pip install -e .
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ -f label_studio/tests/requirements.txt ]; then pip install -r label_studio/tests/requirements.txt; fi
+    - name: format source code
+      run: |
+          black .
     - name: init project
       run: |
         label-studio init my_project
